# nomad

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
lzcompression/: decompose.py  gauss_model.py  lzcomp.py  model_free.py  types.py  util.py
lzcompression/kernels/: base_model_free.py  kernel_base.py  rowwise_variance_gauss_model.py  single_variance_gauss_model.py
lzcompression/util/: base_model_free_util.py  gauss_model_util.py
src/fi_nomad/: __init__.py  decompose.py  entry.py
src/fi_nomad/kernels/: __init__.py  base_model_free.py  kernel_base.py  momentum_three_block_model_free.py  rowwise_variance_gauss_model.py  single_variance_gauss_model.py
src/fi_nomad/types/: __init__.py  enums.py  kernelInputTypes.py  kernelReturnTypes.py  types.py
src/fi_nomad/util/: __init__.py  base_model_free_util.py  decomposition_util.py  factory_util.py  gauss_model_util.py  initialization_util.py  loss_util.py  model_free_util.py  momentum_three_block_model_free_util.py  path_util.py  stats_util.py  util.py
src/lzcompression/: decompose.py
src/lzcompression/kernels/: base_model_free.py  rowwise_variance_gauss_model.py  single_variance_gauss_model.py
src/lzcompression/types/: __init__.py  enums.py  kernelInputTypes.py  types.py
src/lzcompression/util/: gauss_model_util.py  util.py
test/: conftest.py  integration_test.py  test_base_model_free_kernel.py  test_decompose_loop.py  test_gauss_model.py  test_gauss_model_util.py  test_lzcomp.py  test_model_free.py  test_model_free_util.py  test_rowwise_variance_gaussian_model_kernel.py  test_single_variance_gauss_model_kernel.py  test_util.py
test/integration_tests/: integration_test.py
test/test_kernels/: test_base_model_free_kernel.py  test_momentum_three_block_model_free_kernel.py  test_rowwise_variance_gaussian_model_kernel.py  test_single_variance_gauss_model_kernel.py
test/test_kernels/integration_tests/: integration_test.py
test/test_util/: test_decomposition_util.py  test_factory_util.py  test_gauss_model_util.py  test_initialization_util.py  test_loss_util.py  test_model_free_util.py  test_momentum_three_block_model_free_util.py  test_path_util.py  test_stats_util.py  test_util.py
