[build-system]
requires = ["setuptools>=61.0", "numpy>=1.25.0", "scipy>=1.11.1", "scikit-learn>=1.3.0"]
build-backend="setuptools.build_meta"

[tool.setuptools]
packages = ["lzcompression"]

[project]
name = "lzcompression"
version = "0.0.1"
description = "Nonlinear matrix decomposition package"
authors = [
    { name = "Jeff Soules", email = "jsoules@flatironinstitute.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [

]