[build-system]
requires = ["setuptools>=61.0"]
build-backend="setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["lzcompression"]

[project]
name = "lzcompression"
version = "0.0.1"
description = "Sparse nonnegative matrix decomposition package"
authors = [
    { name = "Jeff Soules", email = "jsoules@flatironinstitute.org" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.1",
    "scikit-learn>=1.3.0"
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "black >= 23.3.0",
    "mypy >= 1.4.1"
]
test = [
    "pytest-cov >=4.1.0"
]

[tool.coverage.run]
source = ["src"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report lcov"
