[build-system]
requires = ["setuptools>=61.0"]
build-backend="setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fi_nomad"]

[project]
name = "fi_nomad"
version = "0.0.1"
description = "Nonlinear matrix decomposition package"
authors = [
    { name = "Jeff Soules", email = "jsoules@flatironinstitute.org" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.1",
    "scikit-learn>=1.3.0"
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "black >= 23.3.0",
    "mypy >= 1.4.1",
    "pytest >= 7.4.3"
]
test = [
    "pytest-cov >=4.1.0"
]

[tool.coverage.run]
source = ["src"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report lcov -rs"

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
no_implicit_reexport = true
strict_equality = true
exclude = [
    'conftest.py'
]
